Fix progress bars alignment

--- a/assets/css/progress.css
+++ b/assets/css/progress.css
@@ -1,7 +1,12 @@
 .progressbar {
+    display: inline-flex;
+
     height: 50px;
     width: auto;
     padding: 5px 0px;
+
+    font-family: inherit;
+
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -11,19 +16,17 @@
     -o-transition: 0.4s linear;
     transition: 0.4s linear;
 
-
     -webkit-transition-property: width, background-color;
     -moz-transition-property: width, background-color;
     -ms-transition-property: width, background-color;
     -o-transition-property: width, background-color;
     transition-property: width, background-color;
-    font-family: inherit;
 }
 
 .progressbar-title {
     display: inline-flex;
     position: relative;
-    width: 195px;
+    width: 190px;
 
     background: var(--progress-title-background-color);
 
@@ -41,11 +44,9 @@
 
 .progressbar-title span {
     display: inline-flex;
-    height: 30px;
-    line-height: 100%;
-    padding: 10px;
-
     align-items: center;
+
+    padding: 10px;
 
     -webkit-border-top-left-radius: 3px;
     -webkit-border-bottom-left-radius: 3px;
@@ -57,7 +58,6 @@
 
 .progressbar-bar {
     position: relative;
-    float: right;
 
     width: var(--progressbar-width);
     height: var(--progressbar-height);
